# bevy-osm-tiles

./: .gitignore  .rules  Cargo.toml  README.md  index.html  justfile
.github/workflows/: deploy.yml
docs/: osm-tiles-flow.puml
examples/: city_loader_3d.rs  cli_city_loader.rs  interactive_city_loader.rs
src/: config.rs  download.rs  error.rs  lib.rs
src/bevy_plugin/: components.rs  messages.rs  mod.rs  plugin.rs  resources.rs
src/bevy_plugin/systems/: completion_handler.rs  http_processor.rs  mod.rs  request_handler.rs  task_processor.rs
src/config/: builder.rs  features.rs  mod.rs  region.rs
src/generator/: grid_builder.rs  mod.rs  osm_parser.rs  tile_grid.rs
src/http/: ehttp_client.rs  mod.rs  reqwest_client.rs  traits.rs
src/provider/: file.rs  integration_tests.rs  mock.rs  mod.rs  overpass.rs
