[package]
name = "bevy-osm-tiles"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bevy = { version = "0.17.1", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
geo = "0.31.0"
grid = "1.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.41"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# PNG output dependencies for CLI example
image = { version = "0.25" }

[[example]]
name = "cli_city_loader"
path = "examples/cli_city_loader.rs"
required-features = ["cli"]

[[example]]
name = "city_loader_3d"
path = "examples/city_loader_3d.rs"
required-features = ["bevy", "cli"]

[features]
default = ["bevy"]
bevy = ["dep:bevy"]
cli = []
