[package]
name = "bevy-osm-tiles"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bevy = { version = "0.17.1", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
geo = "0.31.0"
grid = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.41"
urlencoding = "2.1.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

# HTTP client dependencies (optional based on features)
reqwest = { version = "0.12.23", features = ["json"], optional = true }
ehttp = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# PNG output dependencies for CLI example
image = { version = "0.25" }

[profile.release]
# Optimize for smaller WASM builds
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[example]]
name = "cli_city_loader"
path = "examples/cli_city_loader.rs"
required-features = ["cli"]

[[example]]
name = "city_loader_3d"
path = "examples/city_loader_3d.rs"
required-features = ["bevy", "cli"]

[[example]]
name = "interactive_city_loader"
path = "examples/interactive_city_loader.rs"
required-features = ["bevy"]

[features]
default = []
bevy = ["dep:bevy", "ehttp-client"]
cli = ["clap", "tokio"]

# HTTP client features - exactly one should be enabled
reqwest-client = ["dep:reqwest"]
ehttp-client = ["dep:ehttp"]

# Convenience features for specific use cases
wasm = ["ehttp-client", "bevy/web"]  # WASM environments prefer ehttp
native = ["reqwest-client"]  # Native environments prefer reqwest
